<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/register_logo_width_height"
        android:layout_height="@dimen/register_logo_width_height"
        android:layout_marginTop="@dimen/register_button_marginBotton"
        android:contentDescription="@string/appName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/myFirstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_textFields_height"
        android:layout_marginTop="@dimen/register_button_marginBotton"
        android:autofillHints="@string/firstName"
        android:background="@color/tertiaryColor"
        android:gravity="center"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryColor"
        android:textColorHint="@color/secondaryColor"
        android:textSize="@dimen/register_textFields_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <EditText
        android:id="@+id/myLastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_textFields_height"
        android:autofillHints="username"
        android:background="@color/tertiaryColor"
        android:gravity="center"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryColor"
        android:textColorHint="@color/secondaryColor"
        android:textSize="@dimen/register_textFields_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/myEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/myFirstName" />

    <EditText
        android:id="@+id/myEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_textFields_height"
        android:autofillHints="@string/emailAddress"
        android:background="@color/tertiaryColor"
        android:gravity="center"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryColor"
        android:textColorHint="@color/secondaryColor"
        android:textSize="@dimen/register_textFields_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/myPassword"
        app:layout_constraintTop_toBottomOf="@+id/myLastName" />

    <EditText
        android:id="@+id/myPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_textFields_height"
        android:layout_marginTop="100dp"
        android:background="@color/tertiaryColor"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/secondaryColor"
        android:textColorHint="@color/secondaryColor"
        android:textSize="@dimen/register_textFields_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/myDateOfBirth"
        android:layout_width="@dimen/register_dob_and_gender_width"
        android:layout_height="@dimen/register_dob_and_gender_height"
        android:background="@color/tertiaryColor"
        android:gravity="center"
        android:hint="@string/dob"
        android:textColor="@color/secondaryColor"
        android:textColorHint="@color/secondaryColor"
        android:textSize="@dimen/register_radioButton_textSize"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toStartOf="@+id/myGender"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPassword" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myGender"
        android:layout_width="@dimen/register_dob_and_gender_width"
        android:layout_height="@dimen/register_dob_and_gender_height"
        android:background="@color/tertiaryColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myDateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/myPassword">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_radioButton_height"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:shadowColor="@color/secondaryColor"
            android:text="@string/male"
            android:textColor="@color/secondaryColor"
            android:textColorHighlight="@color/secondaryColor"
            android:textColorLink="@color/primaryColor"
            android:textSize="@dimen/register_radioButton_textSize"
            app:fontFamily="@font/letstrace" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_radioButton_height"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/female"
            android:textColor="@color/secondaryColor"
            android:textColorHint="@color/secondaryColor"
            android:textSize="@dimen/register_radioButton_textSize"
            app:fontFamily="@font/letstrace" />
    </RadioGroup>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="@dimen/register_spinner_width"
        android:layout_height="@dimen/register_spinner_height"
        android:background="@color/tertiaryColor"
        android:onClick="onRegisterButtonClicked"
        android:popupBackground="@color/tertiaryColor"
        android:text="@string/register"
        android:textSize="@dimen/register_button_textSize"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myDateOfBirth" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_spinner_height"
        android:layout_marginBottom="@dimen/register_button_marginBotton"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/login_errorText_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>