<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/main_logo_width_and_height"
        android:layout_height="@dimen/main_logo_width_and_height"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/appName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/main_appName_textSize"
        android:textStyle="bold"
        app:fontFamily="@font/letstrace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/appDescription"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/main_appDescription_textSize"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="10dp"
        android:background="@color/tertiaryColor"
        android:onClick="loginPressed"
        android:text="@string/login"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/main_button_textSize"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:background="@color/tertiaryColor"
        android:onClick="registerPressed"
        android:text="@string/register"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/main_button_textSize"
        app:fontFamily="@font/letstrace"
        app:layout_constraintBottom_toTopOf="@+id/language"
        app:layout_constraintLeft_toLeftOf="@+id/loginButton"
        app:layout_constraintRight_toRightOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/language"
        android:contentDescription="@string/appName"
        android:layout_width="@dimen/main_language_width"
        android:layout_height="@dimen/main_language_height"
        android:layout_marginBottom="@dimen/main_language_marginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/english" />

</androidx.constraintlayout.widget.ConstraintLayout>
